# cloud-doc-skill

./: .gitignore  ASYNC_USAGE.md  CHANGES.md  DESIGN.md  MANIFEST.in  README.md  SKILL.md  config.yaml  pyproject.toml  requirements.txt  产品调研AI助手.md
.hypothesis/constants/: 157d1c9039baea89  2417f201a9be70f7  3ffa83b0de002385  41f67b177742fd5a  5e67680b6e9fa322  69c83a0cf84c8922  801a5a3f54270de9  9bd457b31b02374e  a9be3bd8c16c50d8  eb0fccd229c02087
.kiro/settings/: mcp.json
.kiro/specs/aliyun-doc-monitor/: design.md  requirements.md  tasks.md
.kiro/steering/: cloud-doc-skill.md
notifications/: notification_20260302_105132.md  notification_20260302_111900.md
scripts/: compare_eni.py  init_scan.py  run_mcp_dev.py  test_ruliu_notifier.py
src/: __init__.py  api_server.py  baidu_crawler.py  config.py  crawler.py  detector.py  init_db.py  main.py  mcp_server.py  mcp_services.py  mcp_tools_changes.py  mcp_tools_compare.py  mcp_tools_docs.py  mcp_tools_misc.py  notifier.py  openclaw_adapter.py  scheduler.py  storage.py  summarizer.py  tencent_crawler.py  utils.py  volcano_crawler.py
src/skills/: check_changes_skill.py  fetch_doc_skill.py
tests/: test_crawler.py  test_detector.py  test_integration.py  test_mcp.py  test_notifier.py  test_properties.py  test_scheduler.py  test_storage.py  test_summarizer.py
